<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jz_jec_g01.tripwiz.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_guide"
        android:name="com.jz_jec_g01.tripwiz.ui.guide.GuideFragment"
        android:label="@string/title_guide"
        tools:layout="@layout/fragment_guide" />

    <fragment
        android:id="@+id/navigation_talk"
        android:name="com.jz_jec_g01.tripwiz.ui.talk.TalkFragment"
        android:label="@string/title_talk"
        tools:layout="@layout/fragment_talk" />
    <fragment
        android:id="@+id/navigation_myPage"
        android:name="com.jz_jec_g01.tripwiz.ui.myPage.MyPageFragment"
        android:label="@string/title_myPage"
        tools:layout="@layout/fragment_my_page" />
</navigation>