<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignupActivity">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="169dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:text="TripWiz"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextMailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <EditText
        android:id="@+id/editTextMailAddress"
        android:layout_width="243dp"
        android:layout_height="46dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="メールアドレス"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="パスワード"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupGender"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="131dp"
        android:layout_height="61dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/border1"
        android:text="@string/buttonSignUp"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewMailAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:text="@string/textViewMailAddress"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewMailAddress"
        app:layout_constraintEnd_toStartOf="@+id/editTextMailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494" />

    <TextView
        android:id="@+id/textViewMailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="48dp"
        android:text="@string/textViewPw"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewName"
        app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="41dp"
        android:layout_height="19dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="44dp"
        android:text="@string/textViewName"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewGender"
        app:layout_constraintEnd_toStartOf="@+id/editTextName"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="48dp"
        android:text="@string/textViewGender"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/radioGroupGender"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="33dp"
        android:layout_height="16dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="48dp"
        android:text="@string/textViewNationality"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/AgeSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="192dp"
        android:layout_height="48dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/AgeSpinner"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/MradioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/radioButtonMale" />

        <RadioButton
            android:id="@+id/FradioButton"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButtonFemale" />
    </RadioGroup>

    <Spinner
        android:id="@+id/NatioSpinner"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="-6dp"
        android:layout_marginBottom="60dp"
        android:text="@string/textViewAge"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
        app:layout_constraintEnd_toStartOf="@+id/NatioSpinner"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/AgeSpinner"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/NatioSpinner"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>